--- a/active-learning.tex
+++ b/active-learning.tex
@@ -523,6 +523,8 @@ usando em alguma base 2D interessante. Gerar com e sem ramos proporcionais.
 Gravei SVGs no PC de casa.}
 \ano{feature: agnóstica}
 
+% \ano{Desvantagem do cluster-based:        é pesado, mesmo que o aprendiz seja leve}
+
 % Em classificadores probabilísticos, como é o caso do \textit{Naive Bayes} \citep{duda2001pattern},
 % Árvores de decisão \citep{quinlan1993c4}, $k$-vizinhos mais próximos \citep{aha1991instance} e máquinas de vetores de suporte \citep{cristianini2000introduction} também têm sido usados para a estratégia de \textit{uncertainty sampling}.
 % A medida de incerteza, nesses casos, pode ser respectivamente: a pureza do nó, a proporção de vizinhos positivos e a distância exemplo-fronteira \citep{settles2010active}.
