--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1785,3 +1785,25 @@ note = {in press 2015},
   pages =       "273--297",
   \URL =         "http://dx.doi.org/10.1007/BF00994018",
 }
+
+@InProceedings{conf/isaim/DasguptaHM08,
+  title =       "A General Agnostic Active Learning Algorithm",
+  author =      "Sanjoy Dasgupta and Daniel Hsu and Claire Monteleoni",
+  year =        "2008",
+  bibdate =     "2012-02-09",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/isaim/isaim2008.html#DasguptaHM08",
+  booktitle =   "ISAIM",
+  \crossref =    "conf/isaim/2008",
+  \URL =         "http://isaim2008.unl.edu/index.php?page=proceedings",
+}
+
+@Book{books/daglib/0000786,
+  title =       "Introduction to probability and statistics for engineers and scientists (2. ed.)",
+  author =      "Sheldon M. Ross",
+  publisher =   "Academic Press",
+  year =        "2000",
+  bibdate =     "2011-04-07",
+  ISBN =        "978-0-12-598472-0",
+  pages =       "I--XIV, 1--578",
+}
