--- a/meta.tex
+++ b/meta.tex
@@ -17,7 +17,8 @@ A existência do viés de aprendizado é essencial para a capacidade de generalizaç
 do algoritmo \citep{Mitchell:1980}.
 
 Dessa forma, um sistema de aprendizado de máquina requer
-uma escolha criteriosa de qual algoritmo deva ser empregado.
+uma escolha criteriosa de qual algoritmo deve ser empregado.
+% deva <- errado(?)
 % \cite{wolpert1996lack},
 Normalmente, o problema da escolha do algoritmo é resolvido
 por um especialista em aprendizado de máquina que se baseia em conhecimentos
@@ -93,28 +94,25 @@ como a adoção de histogramas para evitar a perda de informações que ocorre quand
 se adota a média das medidas nos diferentes atributos base \citep{kalousis2002algorithm};
 ou a binarização de medidas, como o grau de dispersão do atributo alvo em
 tarefas de regressão \citep{journals/ijon/GomesPSRC12}.
-Outros conjuntos visam a recomendação automática de algoritmos não supervisionados.
-Essa tarefa é mais próxima da recomendação de estratégias de aprendizado ativo
-pela ausência de rótulos.
-Alguns trabalhos, por exemplo, adotam medidas como o grau de normalidade da distribuição e
-o percentual de pontos aberrantes e de atributos mais relevantes
-\citep{conf/ijcnn/SoutoPSACLS08,Ferrari2015181}.
-% e Luis Paulo) para otimizacao
 Também há trabalhos direcionados a: otimização \citep{journals/ijhis/KandaCHS11},
 fluxos de dados \citep{journals/ijon/RossiCSS14}, predição de ranqueamentos
 \citep{conf/iberamia/SouzaCS10} e detecção de ruído \citep{Garcia2015}.
+Finalmente, há trabalhos que visam a recomendação automática de algoritmos
+não supervisionados.
+Essa tarefa é mais próxima da recomendação de estratégias de aprendizado ativo
+pela ausência de rótulos, diferentemente de muitas medidas dos conjuntos
+citados anteriormente que dependem do atributo alvo, ou seja,
+da existência de rótulos.
+Assim, dentro do contexto desta tese, a caracterização não supervisionada
+de bases de dados, apesar de não voltada originalmente ao problema
+de seleção de estratégias, se mostra compatível.
+Esse tipo de caracterização inclui medidas como o grau de normalidade da distribuição e
+o percentual de pontos aberrantes e de atributos mais relevantes
+\citep{conf/ijcnn/SoutoPSACLS08,Ferrari2015181}.
+
 
 As medidas adotadas na presente pesquisa são apresentadas em maior detalhe na
 Seção \ref{recom}.
-
-
-\ano{de falar como voce fala que alguns trabalhos tratam de recomendacao de
-algoritmos nao supervisionados, falar que as medidas diretas
-frequentemente usam informacao sobre o atributo alvo
-e que para algumas estrategias de recomendacao, como aprendi nao
-supervisionado e aprendizado (assim fazer um gancho para sua tese), eh
-necessario procurar medidas adicionais alem das propostas no statlog
-}
 
 % kalousis2002algorithm -
 %Algorithm selection via meta-learning - pg9 formaliza ap. sup. pra eu colocar no cap contexto
